force-app/main/default/objects/EYI_Bank_Details__c/EYI_Bank_Details__c.object-meta.xml
<CustomObject>
    <label>Bank Details</label>
    <nameField>
        <label>Bank Details ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>