force-app/main/default/objects/EYI_Bank_Details__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Bank Details</relationshipLabel>
    <relationshipName>Bank_Details</relationshipName>
    <type>Lookup</type>
</CustomField>