force-app/main/default/objects/EYI_Bank_Details__c/fields/EYI_Account_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Account_Holder_Name__c</fullName>
    <label>Account Holder Name</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>