force-app/main/default/objects/EYI_Bank_Details__c/fields/EYI_Address_Details__c.field-meta.xml
<CustomField>
    <fullName>EYI_Address_Details__c</fullName>
    <label>Address Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>