force-app/main/default/objects/EYI_Bank_Details__c/fields/EYI_Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Bank_Account_Number__c</fullName>
    <label>Bank Account Number</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>