force-app/main/default/objects/EYI_Bank_Details__c/fields/EYI_Bank_Address__c.field-meta.xml
<CustomField>
    <fullName>EYI_Bank_Address__c</fullName>
    <label>Bank Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>