force-app/main/default/objects/EYI_Bank_Details__c/fields/EYI_Bank_Country__c.field-meta.xml
<CustomField>
    <fullName>EYI_Bank_Country__c</fullName>
    <label>Bank Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EYI_Country</valueSetName>
    </valueSet>
</CustomField>