force-app/main/default/objects/EYI_Bank_Details__c/fields/EYI_Bank_Details_ID__c.field-meta.xml
<CustomField>
    <fullName>EYI_Bank_Details_ID__c</fullName>
    <displayFormat>BDID-{0000000}</displayFormat>
    <label>Bank Details ID</label>
    <type>AutoNumber</type>
</CustomField>