force-app/main/default/objects/EYI_Bank_Details__c/fields/EYI_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Bank_Name__c</fullName>
    <label>Bank Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ICICI Bank</fullName>
            </value>
            <value>
                <fullName>HDFC Bank</fullName>
            </value>
            <value>
                <fullName>State Bank of India</fullName>
            </value>
            <value>
                <fullName>Bank of India</fullName>
            </value>
            <value>
                <fullName>Bank of Baroda</fullName>
            </value>
            <value>
                <fullName>Axis Bank</fullName>
            </value>
            <value>
                <fullName>Andhra Pradesh Grameena Vikas Bank</fullName>
            </value>
            <value>
                <fullName>Andhra Pragathi Grameena Bank</fullName>
            </value>
            <value>
                <fullName>Arunachal Pradesh Rural Bank[53]</fullName>
            </value>
            <value>
                <fullName>Aryavart Bank</fullName>
            </value>
            <value>
                <fullName>Assam Gramin Vikash Bank</fullName>
            </value>
            <value>
                <fullName>Bandhan Bank</fullName>
            </value>
            <value>
                <fullName>Bangiya Gramin Vikash Bank</fullName>
            </value>
            <value>
                <fullName>Bank of Bahrain &amp; Kuwait</fullName>
            </value>
            <value>
                <fullName>Bank of Maharashtra</fullName>
            </value>
            <value>
                <fullName>Baroda Gujarat Gramin Bank</fullName>
            </value>
            <value>
                <fullName>Baroda Rajasthan Kshetriya Gramin Bank</fullName>
            </value>
            <value>
                <fullName>Baroda UP Bank</fullName>
            </value>
            <value>
                <fullName>Canara Bank</fullName>
            </value>
            <value>
                <fullName>Central Bank of India</fullName>
            </value>
            <value>
                <fullName>Chaitanya Godavari Gramin Bank[51]</fullName>
            </value>
            <value>
                <fullName>Chhattisgarh Rajya Gramin Bank[55]</fullName>
            </value>
            <value>
                <fullName>CITI</fullName>
            </value>
            <value>
                <fullName>City Union Bank</fullName>
            </value>
            <value>
                <fullName>CSB Bank</fullName>
            </value>
            <value>
                <fullName>Dakshin Bihar Gramin Bank</fullName>
            </value>
            <value>
                <fullName>DBS</fullName>
            </value>
            <value>
                <fullName>DCB Bank</fullName>
            </value>
            <value>
                <fullName>Dhanlaxmi Bank</fullName>
            </value>
            <value>
                <fullName>DHFL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>