force-app/main/default/objects/EYI_Bank_Details__c/fields/EYI_Banker_Escalation_Email__c.field-meta.xml
<CustomField>
    <fullName>EYI_Banker_Escalation_Email__c</fullName>
    <label>Banker Escalation Email</label>
    <type>Email</type>
</CustomField>