force-app/main/default/objects/EYI_Bank_Details__c/fields/EYI_Banker_Mobile__c.field-meta.xml
<CustomField>
    <fullName>EYI_Banker_Mobile__c</fullName>
    <label>Banker Mobile</label>
    <type>Phone</type>
</CustomField>