force-app/main/default/objects/EYI_Bank_Details__c/fields/EYI_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Branch_Name__c</fullName>
    <label>Branch Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>