force-app/main/default/objects/EYI_Bank_Details__c/fields/EYI_City__c.field-meta.xml
<CustomField>
    <fullName>EYI_City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>