force-app/main/default/objects/EYI_Bank_Details__c/fields/EYI_Conga_Template_Id_for_NOC__c.field-meta.xml
<CustomField>
    <fullName>EYI_Conga_Template_Id_for_NOC__c</fullName>
    <label>Conga Template Id for NOC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>