force-app/main/default/objects/EYI_Bank_Details__c/fields/EYI_Country__c.field-meta.xml
<CustomField>
    <fullName>EYI_Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Outside India</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>