force-app/main/default/objects/EYI_Bank_Details__c/fields/EYI_Deactivated__c.field-meta.xml
<CustomField>
    <fullName>EYI_Deactivated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivated</label>
    <type>Checkbox</type>
</CustomField>