force-app/main/default/objects/EYI_Bank_Details__c/fields/EYI_International_Payment_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_International_Payment_Code__c</fullName>
    <label>International Payment Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>