force-app/main/default/objects/EYI_Bank_Details__c/fields/EYI_International_REC__c.field-meta.xml
<CustomField>
    <fullName>EYI_International_REC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>International REC ?</label>
    <type>Checkbox</type>
</CustomField>