force-app/main/default/objects/EYI_Bank_Details__c/fields/EYI_Location__c.field-meta.xml
<CustomField>
    <fullName>EYI_Location__c</fullName>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>