force-app/main/default/objects/EYI_Bank_Details__c/fields/EYI_Name_of_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>EYI_Name_of_Bank_Account__c</fullName>
    <label>Name of Bank</label>
    <length>40</length>
    <type>Text</type>
</CustomField>