force-app/main/default/objects/EYI_Bank_Details__c/fields/EYI_NOC_address_Change__c.field-meta.xml
<CustomField>
    <fullName>EYI_NOC_address_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NOC address Change?</label>
    <type>Checkbox</type>
</CustomField>