force-app/main/default/objects/EYI_Bank_Details__c/fields/EYI_NOC_Generated_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_NOC_Generated_Date__c</fullName>
    <label>NOC Generated Date</label>
    <type>Date</type>
</CustomField>