force-app/main/default/objects/EYI_Bank_Details__c/fields/EYI_Other_Bank__c.field-meta.xml
<CustomField>
    <fullName>EYI_Other_Bank__c</fullName>
    <label>Other Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>