force-app/main/default/objects/EYI_Bank_Details__c/fields/EYI_REC_Account__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>REC Account</label>
    <referenceTo>EYI_REC__c</referenceTo>
    <relationshipLabel>Bank Details</relationshipLabel>
    <relationshipName>Bank_Details</relationshipName>
    <type>Lookup</type>
</CustomField>