force-app/main/default/objects/EYI_Bank_Details__c/fields/Is_New__c.field-meta.xml
<CustomField>
    <fullName>Is_New__c</fullName>
    <formula>if( CreatedDate  ==  LastModifiedDate , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is New</label>
    <type>Checkbox</type>
</CustomField>