force-app/main/default/objects/EYI_Bank_Details__c/validationRules/Banker_Escalation_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Banker_Escalation_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  EYI_IsAutomationBypassed__c = FALSE,
  NOT(ISBLANK(EYI_Banker_Escalation_Mobile__c)),
  NOT(REGEX(EYI_Banker_Escalation_Mobile__c, &quot;^[0-9]{10}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>EYI_Banker_Escalation_Mobile__c</errorDisplayField>
    <errorMessage>Please enter valid 10-digit escalation mobile number.</errorMessage>
</ValidationRule>