force-app/main/default/objects/EYI_Bank_Details__c/validationRules/If_Bank_Name_is_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Bank_Name_is_Other</fullName>
    <active>true</active>
    <description>If Bank Name is Other, then &apos;Other Bank&apos; field is required.</description>
    <errorConditionFormula>AND(
     ISPICKVAL( EYI_Bank_Name__c , &apos;Other&apos;),  
     ISBLANK( EYI_Other_Bank__c )
   )</errorConditionFormula>
    <errorDisplayField>EYI_Other_Bank__c</errorDisplayField>
    <errorMessage>Please provide a Other Bank Name</errorMessage>
</ValidationRule>