force-app/main/default/objects/EYI_Bank_Details__c/validationRules/IFSC_Code_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>IFSC_Code_Rule</fullName>
    <active>false</active>
    <description>For India IFSC Code Should be 11 Digit code</description>
    <errorConditionFormula>AND(
ISPICKVAL( EYI_Bank_Country__c , &quot;India&quot;),
NOT(
AND(
REGEX( EYI_IFSC_Code__c , &quot;^[A-Za-z]{4}0[A-Z0-9a-z]{6}$&quot;)
)
)
)</errorConditionFormula>
    <errorMessage>IFSC Code format is Not valid.</errorMessage>
</ValidationRule>