force-app/main/default/objects/EYI_Bank_Details__c/validationRules/Pincode_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Pincode_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
EYI_IsAutomationBypassed__c = FALSE,
NOT(ISBLANK( EYI_Pincode__c )),
NOT(REGEX(EYI_Pincode__c , &quot;^[0-9]{6}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>EYI_Pincode__c</errorDisplayField>
    <errorMessage>Please enter valid 6-digit Pin code number.</errorMessage>
</ValidationRule>