force-app/main/default/objects/EYI_Bank_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EYI_Name_of_Bank_Account__c</columns>
    <columns>EYI_Account_Holder_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>